--- a/iceBearDemo/src/css/index.less
+++ b/iceBearDemo/src/css/index.less
@@ -1,7 +1,8 @@
 html, body {
   font-size: 20px;
   //限制宽度
-  max-width: 18rem;
+  max-width: 20rem;
+  min-width: 18rem;
   margin: 0 auto;
 }
 
@@ -196,7 +197,6 @@ html, body {
       background: url('../public/images/search.png') no-repeat left center;
     }
   }
-
 }
 
 //搜索框往下直到footer区域的content内容区域
