--- a/iceBearDemo/src/css/index.less
+++ b/iceBearDemo/src/css/index.less
@@ -2,7 +2,7 @@ html, body {
   font-size: 20px;
   //限制宽度
   max-width: 20rem;
-  width: 95%;
+  //width: 95%;
   min-width: 18rem;
   margin: 0 auto;
 }
