--- a/iceBearDemo/src/css/index.less
+++ b/iceBearDemo/src/css/index.less
@@ -2,7 +2,7 @@ html, body {
   font-size: 20px;
   //限制宽度
   max-width: 20rem;
-  //width: 95%;
+  width: 100%;
   min-width: 18rem;
   margin: 0 auto;
 }
@@ -569,6 +569,7 @@ html, body {
           width: 100%;
           height: 5rem;
           background: url("../public/images/guess1.png") no-repeat;
+          background-position: center center;
         }
 
         .des {
