font-family: '微软雅黑', serif;

--- a/iceBearDemo/src/css/index.less
+++ b/iceBearDemo/src/css/index.less
@@ -5,6 +5,7 @@ html, body {
   width: 100%;
   min-width: 18rem;
   margin: 0 auto;
+  font-family: '微软雅黑', serif;
 }
 
 //tabBar中li之间的padding-left和padding-right的值
