--- a/loginExample/src/index.less
+++ b/loginExample/src/index.less
@@ -6,15 +6,6 @@
   display: flex;
   flex-direction: @direction;
 }
-
-.percent100 {
-  width: 100%;
-}
-
-.percent50 {
-  width: 50%;
-}
-
 .container {
   padding-bottom: 15rem;
   background: @backColor;
@@ -225,6 +216,10 @@ body {
     padding-right: 100px;
   }
 
+  .header {
+    height: 50px;
+  }
+
   .form {
     padding-bottom: 20px;
   }
@@ -277,8 +272,6 @@ body {
     padding-left: 360px;
     padding-right: 360px;
     height: 70px;
-
-
   }
 }
 
@@ -339,4 +332,7 @@ body {
 
 }
 
+* {
+  transition: .5s;
+}
 
